show names editor popup, move strings to bundle, fix doubles classes file address